Add text on reducing scales to Lydian collecitons.

--- a/diss.bib
+++ b/diss.bib
@@ -197,6 +197,17 @@ Theory} }
   issue       = {Spring}
 }
 
+@article{cloughetal:1999,
+  author      = {Clough, John and Engebretsen, Nora and Kochavi, Jonathan},
+  title       = {Scales, Sets, and Interval Cycles: A Taxonomy},
+  journal     = {Music Theory Spectrum},
+  volume      = {21},
+  number      = {1},
+  pages       = {47--101},
+  year        = {1999},
+  issue       = {Spring}
+}
+
 @article{cloughmyerson:1985,
   author      = {Clough, John and Myerson, Gerald},
   title       = {Variety and Multiplicity in Diatonic Systems},
