--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -147,23 +147,37 @@
   \headlesscite{tymoczko:1997} and \headlesscite{tymoczko:2004}.}
 
 \fntext{cst-2}{%
-  % xxx need citation about scale theory generally
-  Nor will we have need of the extensive literature on the abstract
-  structure of scales in general. For an overview, see ??.}
+  Nor will we have need of the extensive literature on the abstract structure
+  of scales in general. For an introduction, see \cite{cloughetal:1999}.}
 
 \fntext{cst-3}{%
-  Bishop's primary source is \cite{grafnettles:1997}; \cite{berklee:harmony}
-  covers much of the same material but in a more modern way (neither book
-  mentions Russell at all). The Berklee method systematizes much of Russell's
-  method in a way suitable for teaching undergraduate jazz musicians. Every
-  tone in a scale, for example, is either a chord tone, an avoid note, or a
-  ``tension'': an upper extension that colors the basic
-  sound (\emph{Berklee Book of Jazz Harmony}, xi).}
+  Bishop's primary source is Graf and Nettles's \emph{Chord Scale Theory and
+    Jazz Harmony}\nocite{grafnettles:1997}; Mulholland and Hojnacki's
+  \citetitle{berklee:harmony} covers much of the same material but in a more
+  modern way (neither book mentions Russell at all). The Berklee method
+  systematizes much of Russell's method in a way suitable for teaching
+  undergraduate jazz musicians. Every tone in a scale, for example, is either
+  a chord tone, an avoid note, or a ``tension'': an upper extension that
+  colors the basic sound of a chord (\emph{Berklee Book of Jazz Harmony},
+  xi).}
 
 \fntext{cst-4}{%
   These triadic approaches also tend towards music that is less clearly tonal,
   and were devised partly as a means of moving beyond the standard chord-scale
   approach we are examining here.}
+
+\fntext{cst-5}{%
+  Indeed, this lack of focus on common-tone connections in the pedagogical
+  literature is the main reason for Love's ``Model of Common Tone
+  Connections.''\nocite{love:2009}}
+
+\fntext{cst-6}{%
+  The shift in terminology from the Lydian ``scale'' to the Lydian
+  ``collection'' here is deliberate, but not theoretically significant. In
+  practice, Russell treats a scale as a collection: a group of notes from
+  which to generate chord tones or improvisations. In this section we will be
+  more interested in scales as collections, rather than (say) their function
+  as ``musical rulers.''}
 
 %%% Local Variables:
 %%% mode: latex
