Add first pass at a chord-scale GIS.

--- a/mjmdiss.sty
+++ b/mjmdiss.sty
@@ -262,6 +262,10 @@
   }%
 }
 
+\newcommand{\scalepair}[2]{%
+  \mbox{\ensuremath{\langle}#1, #2\ensuremath{\rangle}}%
+}
+
 % text shortcuts
 \newcommand{\tf}{\mbox{ii--V}\xspace}
 \newcommand{\tfo}{\mbox{ii--V--I}\xspace}
@@ -292,6 +296,8 @@
 \newcommand{\ECTarrow}{\ensuremath{\xrightarrow{\mathrm{EC}_\mathrm{T}\,}}}
 \newcommand{\CSarrow}{\ensuremath{\xrightarrow{\mathrm{CS}\,}}}
 \newcommand{\intZ}{\ensuremath{\mathbb{Z}}}
+\newcommand{\la}{\ensuremath{\langle}\xspace}
+\newcommand{\ra}{\ensuremath{\rangle}\xspace}
 
 \newcommand{\Smin}{\ensuremath{S_{\mathrm{min}}}\xspace}
 \newcommand{\Sdom}{\ensuremath{S_{\mathrm{dom}}}\xspace}
