Add text on determining chord-scale relationships.

--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -215,6 +215,27 @@
   index \gis. The negative sign implies that the motion moves from dissonant
   to consonant, and the $7$ shows that this is a large move.}
 
+\fntext{cst-14}{%
+  Because the diatonic modes are well-known, I have substituted ``diatonic''
+  for ``Lydian'' in the first place here in the hopes that it will be less
+  confusing. This way, we might refer to the first collection in Figure
+  \ref{cst:gis-fiveone} as \scalepair{\nat}{Mixolydian}.}
+
+\fntext{cst-15}{%
+  The dominant chords that appear in mode +V are related by tritone to those
+  in mode II. The fact that these tritone-related dominants appear along with
+  the whole-tone and diminished scales is no accident: because these scales
+  are symmetrical at the tritone, these scales are particularly effective when
+  soloing over dominant seventh chords. Dmitri Tymoczko discusses this
+  practice explicitly in \headlesscite[365--68]{tymoczko:2011}.}
+
+\fntext{cst-16}{%
+  It is reasonable to wonder why we did not collapse the Lydian augmented and
+  Lydian \flat{}7 scales into a single mode, as we did with the horizontal
+  major scale and the vertical acoustic scale. The aim in this section is to
+  show that the two scales do in fact function differently, which justifies
+  their presence as separate vertical scales.}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../diss"
