Add text on relaxing GIS a bit.

--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -236,6 +236,12 @@
   show that the two scales do in fact function differently, which justifies
   their presence as separate vertical scales.}
 
+\fntext{cst-17}{%
+  % xxx find this coker citation
+  The diatonic collections are shown in flatwise order traveling clockwise.
+  This corresponds to the way the circle of fifths (or fourths) is usually
+  presented in jazz textbooks.}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../diss"
