Clarify section about relaxing chord-scale GIS.
(This turned out to be more of a sticky wicket than I was anticipating.)

--- a/diss.bib
+++ b/diss.bib
@@ -385,6 +385,18 @@ Theory} }
   year        = {1964}
 }
 
+@review{hall:2009,
+  author      = {Hall, Rachel},
+  title       = {Review of David Lewin, \textit{Generalized Musical Intervals
+                and Transformations}, \textit{Musical Form and
+                Transformation: Four Analytic Essays}, and \textit{Musical
+                Form and Transformation}},
+  journal     = {Journal of the American Musicological Society},
+  volume      = {62},
+  number      = {1},
+  year        = {2009}
+}
+
 @phdthesis{heyer:2011,
   author      = {Heyer, David J.},
   title       = {Vocabulary, Voice Leading, and Motivic Coherence in Chet
@@ -971,6 +983,28 @@ Theory} }
   pages       = {72--74},
   month       = jul,
   year        = {2006}
+}
+
+@article{tymoczko:2008,
+  author      = {Tymoczko, Dmitri},
+  title       = {Lewin, Intervals, and Transformations: a Comment on Hook},
+  journal     = {Music Theory Spectrum},
+  volume      = {30},
+  number      = {1},
+  pages       = {164--68},
+  year        = {2008},
+  issue       = {Spring}
+}
+
+@article{tymoczko:2009,
+  author      = {Tymoczko, Dmitri},
+  title       = {Generalizing Musical Intervals},
+  journal     = {Journal of Music Theory},
+  volume      = {53},
+  number      = {2},
+  pages       = {227--54},
+  year        = {2009},
+  issue       = {Fall}
 }
 
 @book{tymoczko:2011,
