--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -242,6 +242,24 @@
   This corresponds to the way the circle of fifths (or fourths) is usually
   presented in jazz textbooks.}
 
+\fntext{cst-18}{%
+  % xxx need these citations
+  Many authors have commented on this limitation, which Lewin first observes
+  in \citetitle[27]{lewin:gmit}. Dmitri Tymoczko is probably the most vocal in
+  his opposition, and proposes incorporating a distance metric into the
+  definition of what he calls a ``Lewinian interval
+  system'' \parentext{\headlesscite[245--46]{tymoczko:2009}}; in other places,
+  he has suggested that relaxing some of the restrictions on a \gis is
+  ``anti-Lewin'' \parentext{\headlesscite{tymoczko:2008}}. For more on this
+  tension, see Rachel Hall's review of \emph{GMIT};\nocite{hall:2009}
+  \cite[especially 185--86]{hook:2007gmit}; and \cite[]{rings:2011}.}
+
+\fntext{cst-19}{%
+  Admittedly, the outgoing boundary is more permeable than the ingoing:
+  we could conceive of a scale that is more dissonant than the blues scale
+  (the total chromatic, perhaps) and incorporate it into the system, while for
+  Russell the Lydian boundary is absolute.}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../diss"
