Clarify chord-scale intervals vs. transformations.

--- a/diss.bib
+++ b/diss.bib
@@ -386,7 +386,7 @@ Theory} }
 }
 
 @review{hall:2009,
-  author      = {Hall, Rachel},
+  author      = {Hall, Rachel Wells},
   title       = {Review of David Lewin, \textit{Generalized Musical Intervals
                 and Transformations}, \textit{Musical Form and
                 Transformation: Four Analytic Essays}, and \textit{Musical
@@ -394,7 +394,9 @@ Theory} }
   journal     = {Journal of the American Musicological Society},
   volume      = {62},
   number      = {1},
-  year        = {2009}
+  pages       = {205--22},
+  year        = {2009},
+  issue       = {Spring}
 }
 
 @phdthesis{heyer:2011,
@@ -969,6 +971,7 @@ Theory} }
   journal     = {Journal of Music Theory},
   volume      = {48},
   number      = {2},
+  pages       = {219--94},
   month       = oct,
   year        = {2004}
 }
