--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -180,7 +180,7 @@
   as ``musical rulers.''}
 
 \fntext{cst-7}{%
-  These names have been chosen to reflect common jazz usage, so scale 4 is the
+  These names have been chosen to reflect common jazz usage, so scale 3 is the
   Lydian dominant scale rather than the acoustic scale.}
 
 \fntext{cst-8}{%
@@ -210,10 +210,11 @@
   4 semitones are called ``thirds.''}
 
 \fntext{cst-13}{%
-  The use of $-7$ rather than $1$ in the second place here is intended to work
-  around some of the limitations of using $\intZ_8$ as the group for the scale
-  index \gis. The negative sign implies that the motion moves from dissonant
-  to consonant, and the $7$ shows that this is a large move.}
+  We might consider using $-7$ rather than $1$ in the second place here, to
+  reflect the intuition that the move from the blues scale to the parent
+  Lydian is an ingoing motion. This seems to be a valid judgment, but affects
+  the group structure of \ivls ($-7$ is not a member of $\intZ_8$). We will
+  return to this limitation in the next section.}
 
 \fntext{cst-14}{%
   Because the diatonic modes are well-known, I have substituted ``diatonic''
@@ -237,22 +238,22 @@
   their presence as separate vertical scales.}
 
 \fntext{cst-17}{%
-  % xxx find this coker citation
   The diatonic collections are shown in flatwise order traveling clockwise.
   This corresponds to the way the circle of fifths (or fourths) is usually
-  presented in jazz textbooks.}
+  presented in jazz textbooks; see, for example, \cite[v]{coker:elements}.}
 
 \fntext{cst-18}{%
-  % xxx need these citations
   Many authors have commented on this limitation, which Lewin first observes
   in \citetitle[27]{lewin:gmit}. Dmitri Tymoczko is probably the most vocal in
   his opposition, and proposes incorporating a distance metric into the
   definition of what he calls a ``Lewinian interval
   system'' \parentext{\headlesscite[245--46]{tymoczko:2009}}; in other places,
   he has suggested that relaxing some of the restrictions on a \gis is
-  ``anti-Lewin'' \parentext{\headlesscite{tymoczko:2008}}. For more on this
-  tension, see Rachel Hall's review of \emph{GMIT};\nocite{hall:2009}
-  \cite[especially 185--86]{hook:2007gmit}; and \cite[]{rings:2011}.}
+  ``anti-Lewinian'' \parentext{\headlesscite{tymoczko:2008}}. For more on this
+  tension, see Rachel Wells Hall's review of \emph{GMIT} (\emph{Journal of the
+    American Musicological Society} 62 no.~1 [Spring 2009]:
+  205-22);\nocite{hall:2009} \cite[especially 185--86]{hook:2007gmit}; and
+  \cite[19--20]{rings:2011}.}
 
 \fntext{cst-19}{%
   Admittedly, the outgoing boundary is more permeable than the ingoing:
