Add chord symbols to chord-scale transformations.

--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -261,6 +261,18 @@
   (the total chromatic, perhaps) and incorporate it into the system, while for
   Russell the Lydian boundary is absolute.}
 
+\fntext{cst-20}{%
+  We will generally use this new form of the $R$ transformation, but in cases
+  where there is a need to distinguish between this version and the version
+  used just above, ``2-element $R$\,'' versus ``3-element $R$\,'' works nicely.}
+
+\fntext{cst-21}{%
+  In fact, the situation is even more complex, since a single chord symbol can
+  support only a subset of the 96 chord-scales. Thus every chord symbol would
+  contain a \emph{different} partial copy of the planetary model. Only the
+  chords listed in Table \ref{cst:scale-table}, for example, would be able to
+  show the scales from the \nat\ diatonic wedge.}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../diss"
