Add Autumn Leaves transcription (Ammons/Stitt).

--- a/appendices/transcriptions.tex
+++ b/appendices/transcriptions.tex
@@ -35,15 +35,22 @@ transcription.
 \section*{List of Transcriptions}
 
 \begin{compactitem}
+    \item ``Autumn Leaves'' -- Gene Ammons and Sonny Stitt
+      (p.~\pageref{transcription:autumn-leaves})
     \item ``Blues for Alice'' -- Rahsaan Roland Kirk
       (p.~\pageref{transcription:blues-for-alice})
     \item ``Isotope'' -- Joe Henderson (p.~\pageref{transcription:isotope})
     \item ``Rhythm-a-ning'' -- Johnny Griffin and Thelonious Monk
       (p.~\pageref{transcription:rhythm-a-ning})
 \end{compactitem}
-\nocite{henderson:isotope,monk:action,kirk:freekings}
+\nocite{ammons:stitt,henderson:isotope,monk:action,kirk:freekings}
 
 \newpage
+
+\phantomsection
+\addcontentsline{toc}{section}{``Autumn Leaves'' -- Gene Ammons and Sonny Stitt}
+\label{transcription:autumn-leaves}
+\includepdf[pages=-,pagecommand={},noautoscale]{eps/transcriptions/autumn-leaves.pdf}
 
 \phantomsection
 \addcontentsline{toc}{section}{``Blues for Alice'' -- Rahsaan Roland Kirk}
