Ensure maj7 chord suffix consistency.
We're now using "maj7" exclusively in the text, mainly-text examples,
and lead sheets. The triangle gets used in diagrams (transformation
networks) so that "maj7" doesn't clutter things up too much. "M7"
shouldn't appear anywhere after this commit (except in "mM7," which is
fine).

--- a/footnotes/ch1-notes.tex
+++ b/footnotes/ch1-notes.tex
@@ -403,7 +403,7 @@
 \fntext{ds-18}{%
   Exactly which chord functions as the pivot is of little importance, so long
   as it happens before the E dominant seventh. I am inclined to hear the
-  \h{FM7} as a pivot (functioning simultaneously as IV and VI), in order to
+  \h{Fmaj7} as a pivot (functioning simultaneously as IV and VI), in order to
   keep both \tfo\ progressions (in C major and A minor) intact.}
 
 \fntext{ds-18a}{%
@@ -423,12 +423,12 @@
 
 \fntext{ds-19}{%
   Again, this implicit diatonicism has not gone unnoticed; Ahmad Jamal arrives
-  emphatically on \h{CM7} in the fourth bar of the bridge on \emph{Jamal at
+  emphatically on \h{Cmaj7} in the fourth bar of the bridge on \emph{Jamal at
   the Pershing, Vol.~2}.\nocite{jamal:pershing}}
 
 \fntext{ds-20}{%
   If the linking dominant did not appear at the end of the bridge, we would see
-  the succession \h{EM7}--\h{Fm7}. This succession is remarkably similar to
+  the succession \h{Emaj7}--\h{Fm7}. This succession is remarkably similar to
   Lewin’s \textsc{slide} operation: retaining the third of the chord while
   moving the root and fifth by half-step; see \emph{GMIT},
   178.\nocite{lewin:gmit} Here, the seventh is also retained as a common tone;
