--- a/footnotes/ch2-notes.tex
+++ b/footnotes/ch2-notes.tex
@@ -18,7 +18,7 @@
 
 \fntext{tf-2a}{%
   The triangle on the C chord in this figure indicates a major seventh. The
-  triangle (instead of ``\h{maj7}'' or ``\h{M7}'') is intended to save space and
+  triangle (instead of ``\h{maj7}'') is intended to save space and
   reduce clutter in the graphical representations.}
 
 \fntext{tf-3}{%
@@ -137,7 +137,7 @@
   calls it the ``descending blues'' in \headlesscite[228]{levine:1995}. Like many
   sets of Parker changes, several different versions exist; the changes here
   represent a mediation of these sources. \emph{The Real Book} gives \h{Am7} (a
-  vi chord) instead of \h{FM7} in m.~11; Levine's \emph{Jazz Theory Book} gives
+  vi chord) instead of \h{Fmaj7} in m.~11; Levine's \emph{Jazz Theory Book} gives
   \h{Db7} (a tritone substitute) instead of \h{G7} in the second half of m.~3;
   and the \emph{Charlie Parker Omnibook} omits both \h{D7} chords (the first in
   the second half of m.~7, the second in m.~11) and the tonic in m.~11 is an
@@ -236,8 +236,8 @@
   seventh chord.}
 
 \fntext{tfe-6}{%
-  ``Ceora'' is perhaps even more diatonic than this space implies, since \h{CM7}
-  and \h{BbM7} never appear in the music, while \h{DbM7} does. Thus the
+  ``Ceora'' is perhaps even more diatonic than this space implies, since \h{Cmaj7}
+  and \h{Bbmaj7} never appear in the music, while \h{Dbmaj7} does. Thus the
   chord qualities strongly suggest \h{Ab} major: I and IV (\Aflat\ and \Dflat)
   both appear as major sevenths, while ii and iii (\Bflat\ and C) appear only
   as minor seventh chords (unstable \ii chords).}
