--- a/footnotes/ch3-notes.tex
+++ b/footnotes/ch3-notes.tex
@@ -230,7 +230,7 @@
   (the unlabeled arrows are again TF transformations), and these networks are
   connected by larger-scale transpositions. In this figure, the \slideS
   transformations breaks through the bubble itself, and describes a
-  transformation directly from \h{GbM7} to \h{Gm7}.}
+  transformation directly from \h{Gbmaj7} to \h{Gm7}.}
 
 \fntext{pvl-1}{%
   In addition to including the major seventh chords, this figure corrects some
