Misc. minor updates to front matter.
These mostly have to do with spacing in the table of contents and lists
of figures/tables, but the title format for these have also changed.

--- a/appendices/transcriptions.tex
+++ b/appendices/transcriptions.tex
@@ -1,5 +1,6 @@
 \doublespacing
 \chapter{Transcriptions}
+\addtocspace
 \singlespacing
 
 % xxx Write something about transcription generally here
@@ -48,22 +49,22 @@ transcription.
 \newpage
 
 \phantomsection
-\addcontentsline{toc}{section}{``Autumn Leaves'' -- Gene Ammons and Sonny Stitt}
+\addcontentsline{toc}{section}{“Autumn Leaves” -- Gene Ammons and Sonny Stitt}
 \label{transcription:autumn-leaves}
 \includepdf[pages=-,pagecommand={},noautoscale]{eps/transcriptions/autumn-leaves.pdf}
 
 \phantomsection
-\addcontentsline{toc}{section}{``Blues for Alice'' -- Rahsaan Roland Kirk}
+\addcontentsline{toc}{section}{“Blues for Alice” -- Rahsaan Roland Kirk}
 \label{transcription:blues-for-alice}
 \includepdf[pages=-,pagecommand={},noautoscale]{eps/transcriptions/blues-for-alice.pdf}
 
 \phantomsection
-\addcontentsline{toc}{section}{``Isotope'' -- Joe Henderson}
+\addcontentsline{toc}{section}{“Isotope” -- Joe Henderson}
 \label{transcription:isotope}
 \includepdf[pages=-,pagecommand={},noautoscale]{eps/transcriptions/isotope.pdf}
 
 \phantomsection
-\addcontentsline{toc}{section}{``Rhythm-a-ning'' -- Johnny Griffin and Thelonious Monk}
+\addcontentsline{toc}{section}{“Rhythm-a-ning” -- Johnny Griffin and Thelonious Monk}
 \label{transcription:rhythm-a-ning}
 \includepdf[pages=-,pagecommand={},noautoscale]{eps/transcriptions/rhythm-a-ning.pdf}
 
