Updates to transcriptions intro, footnotes.

--- a/appendices/transcriptions.tex
+++ b/appendices/transcriptions.tex
@@ -19,30 +19,32 @@ somewhat fluid through the course of a performance; I have simply omitted the
 chord symbols rather than assigning one based on the solo line. In the
 transcriptions, the notes remain more-or-less uninterpreted (though the
 notation of accidentals is a question of interpretation); examples in the text
-refer to a given passage's harmonic context. Formal designations follow
-Larson's convention: $2\mathrm{A}_3$ refers to the third A section of the
-second chorus, $4\mathrm{B}$ refers to the B section of the fourth chorus, and
-so on. Timestamps from the reference recording are given at the beginning of
-each chorus.
+refer to a given passage's harmonic context.
 
-There are several things to note about Kirk's performance of ``Blues for
-Alice.'' First, the album gives his name only as Roland Kirk; he added Rahsaan
-to his name in 1969. Second, Kirk often played multiple instruments
-simultaneously; the transcription tries to make this clear, providing a
-separate staff for each instrument. He played (among other things) a modified
-soprano saxophone known as a manzello; both names are given in the
-transcription.
+\vspace{\baselineskip}
+\noindent There are a few other minor things to note:
+\begin{compactitem}
+  \item Formal designations follow Larson's convention: $2\mathrm{A}_3$ refers
+    to the third A section of the second chorus, $4\mathrm{B}$ refers to the B
+    section of the fourth chorus, and so on. Timestamps from the reference
+    recording are given at the beginning of each chorus.
+  \item Throughout, the tenor saxophone is notated at concert pitch but sounds
+    down an octave, and soprano saxophone is notated at pitch.
+  \item ``X'' noteheads indicate either ghosted notes (which are much lower in
+    volume than surrounding notes) or alternate fingerings for the same pitch
+    (a timbral effect often used in the high register by saxophonists).
+\end{compactitem}
 
 \section*{List of Transcriptions}
 
-\begin{compactitem}
-    \item ``Autumn Leaves'' -- Gene Ammons and Sonny Stitt
-      (p.~\pageref{transcription:autumn-leaves})
-    \item ``Blues for Alice'' -- Rahsaan Roland Kirk
-      (p.~\pageref{transcription:blues-for-alice})
-    \item ``Isotope'' -- Joe Henderson (p.~\pageref{transcription:isotope})
-    \item ``Rhythm-a-ning'' -- Johnny Griffin and Thelonious Monk
-      (p.~\pageref{transcription:rhythm-a-ning})
+\begin{compactitem}[\hspace{1.5em}]
+    \item ``Autumn Leaves'' -- Gene Ammons and Sonny Stitt \dotfill
+      \pageref{transcription:autumn-leaves}
+    \item ``Blues for Alice'' -- Rahsaan Roland Kirk \dotfill
+      \pageref{transcription:blues-for-alice}
+    \item ``Isotope'' -- Joe Henderson \dotfill \pageref{transcription:isotope}
+    \item ``Rhythm-a-ning'' -- Johnny Griffin and Thelonious Monk \dotfill
+      \pageref{transcription:rhythm-a-ning}
 \end{compactitem}
 \nocite{ammons:stitt,henderson:isotope,monk:action,kirk:freekings}
 
@@ -51,12 +53,28 @@ transcription.
 \phantomsection
 \addcontentsline{toc}{section}{“Autumn Leaves” -- Gene Ammons and Sonny Stitt}
 \label{transcription:autumn-leaves}
-\includepdf[pages=-,pagecommand={},noautoscale]{eps/transcriptions/autumn-leaves.pdf}
+\centerGraphic[page=1,,clip,trim=0pt .6in 0pt 0pt,width=.95\textwidth]{%
+  eps/transcriptions/autumn-leaves.pdf}
+\blankfootnote{%
+    The head changes for this recording are as given in Figure
+    \ref{ds:autumn-leaves-complete}, but the solo changes shown here are
+    slightly different. The third and fourth bars of each A section consistently
+    substitute \h{Emaj7}--\h{Bbmaj7} for \h{Bbmaj7}--\h{Ebmaj7}, and the
+    progression \h{Gm7}--\h{C7}--\h{Fm7}--\h{Bb7} in the third and fourth bars
+    of the C sections appear here as \h{Gm7}--\h{Em7b5}.}
+\includepdf[pages=2-,pagecommand={},noautoscale]{eps/transcriptions/autumn-leaves.pdf}
 
 \phantomsection
 \addcontentsline{toc}{section}{“Blues for Alice” -- Rahsaan Roland Kirk}
 \label{transcription:blues-for-alice}
-\includepdf[pages=-,pagecommand={},noautoscale]{eps/transcriptions/blues-for-alice.pdf}
+\centerGraphic[page=1,,clip,trim=0pt 1in 0pt 0pt]{eps/transcriptions/blues-for-alice.pdf}
+\blankfootnote{%
+    The album gives Kirk's name only as Roland Kirk; he added
+    Rahsaan to his name in 1969. Kirk often played multiple instruments
+    simultaneously; the transcription tries to make this clear, providing a
+    separate staff for each instrument. The ``manzello'' is a modified soprano
+    saxophone (both names are given here).}
+\includepdf[pages=2-,pagecommand={},noautoscale]{eps/transcriptions/blues-for-alice.pdf}
 
 \phantomsection
 \addcontentsline{toc}{section}{“Isotope” -- Joe Henderson}
