Minor updates to transcriptions.

--- a/appendices/transcriptions.tex
+++ b/appendices/transcriptions.tex
@@ -59,7 +59,7 @@ refer to a given passage's harmonic context.
     The head changes for this recording are as given in Figure
     \ref{ds:autumn-leaves-complete}, but the solo changes shown here are
     slightly different. The third and fourth bars of each A section consistently
-    substitute \h{Emaj7}--\h{Bbmaj7} for \h{Bbmaj7}--\h{Ebmaj7}, and the
+    substitute \h{Bm7}--\h{E7}--\h{Bbm7}--\h{Eb7} for \h{Bbmaj7}--\h{Ebmaj7}, and the
     progression \h{Gm7}--\h{C7}--\h{Fm7}--\h{Bb7} in the third and fourth bars
     of the C sections appear here as \h{Gm7}--\h{Em7b5}.}
 \includepdf[pages=2-,pagecommand={},noautoscale]{eps/transcriptions/autumn-leaves.pdf}
