Initial text on solo analysis, non-harmonic tones.

--- a/diss.bib
+++ b/diss.bib
@@ -767,6 +767,15 @@ Theory} }
   year        = {2009}
 }
 
+@book{owens:1995,
+  author      = {Owens, Thomas},
+  title       = {Bebop},
+  subtitle    = {The Music and its Players},
+  address     = {New York},
+  publisher   = {Oxford University Press},
+  year        = {1995}
+}
+
 @book{pohlert:bh,
   author      = {Pöhlert, Werner},
   title       = {Basic Harmony},
