--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -273,6 +273,24 @@
   chords listed in Table \ref{cst:scale-table}, for example, would be able to
   show the scales from the \nat\ diatonic wedge.}
 
+% Chord-Scale Analysis
+
+\fntext{csa-1}{%
+  Complete transcriptions for all solos analyzed in this chapter and the next
+  can be found in Appendix B.}
+
+\fntext{csa-2}{%
+  This is to say nothing of the fact that perhaps the most important aspect of
+  a jazz solo is that it is improvised; transcriptions must necessarily only
+  focus on a single recorded performance.}
+
+\fntext{csa-3}{%
+  Thomas Owens (among others) refers to the bebop-inspired style as jazz's
+  lingua franca \parentext{\headlesscite[4]{owens:1995}}. To avoid focusing on
+  Parker and Coltrane is not to say that the performers examined here are not
+  also great musicians; all of them (but especially Stitt and Henderson) are
+  widely regarded among jazz musicians.}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../diss"
