--- a/mjmdiss.sty
+++ b/mjmdiss.sty
@@ -226,13 +226,13 @@
 \newcommand{\flatkern}{\hspace{\fklen}}
 \newcommand{\sharpkern}{\hspace{\sklen}}
 
-\newcommand{\Bflat}{\mbox{B\flatkern\flat\sharpkern}}
-\newcommand{\Eflat}{\mbox{E\flatkern\flat\sharpkern}}
-\newcommand{\Aflat}{\mbox{A\flatkern\flat\sharpkern}}
-\newcommand{\Dflat}{\mbox{D\flatkern\flat\sharpkern}}
-\newcommand{\Gflat}{\mbox{G\flatkern\flat\sharpkern}}
-\newcommand{\Cflat}{\mbox{C\flatkern\flat\sharpkern}}
-\newcommand{\Fflat}{\mbox{F\flatkern\flat\sharpkern}}
+\newcommand{\Bflat}{\mbox{B\flatkern\flat\sharpkern}\xspace}
+\newcommand{\Eflat}{\mbox{E\flatkern\flat\sharpkern}\xspace}
+\newcommand{\Aflat}{\mbox{A\flatkern\flat\sharpkern}\xspace}
+\newcommand{\Dflat}{\mbox{D\flatkern\flat\sharpkern}\xspace}
+\newcommand{\Gflat}{\mbox{G\flatkern\flat\sharpkern}\xspace}
+\newcommand{\Cflat}{\mbox{C\flatkern\flat\sharpkern}\xspace}
+\newcommand{\Fflat}{\mbox{F\flatkern\flat\sharpkern}\xspace}
 
 % Define a new command, \h, that prints a harmony.
 % It substitutes all 's' chars with sharps, and all 'b' chars with flats.
