Add text/example on harmonic generalization.

--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -291,6 +291,21 @@
   also great musicians; all of them (but especially Stitt and Henderson) are
   widely regarded among jazz musicians.}
 
+\fntext{csa-4}{%
+  \Cite[46]{coker:elements}. Coker's manual is primarily for student
+  improvisers (hence the wording here), but is also analytically useful as a
+  handbook of common improvisational devices.}
+
+\fntext{csa-5}{%
+  There are two staves in this figure because Kirk often played multiple
+  saxophones simultaneously. Here the tenor saxophone (which sounds down an
+  octave) is played with his left
+  hand and the manzello---a modified soprano saxophone---is played with his
+  right. Normally the left hand is positioned at the top of the saxophone, so
+  playing it in this manner limits his note choices somewhat (the left-hand
+  palm keys are unreachable with the right hand). We will see a concrete
+  example of this below.}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../diss"
