--- a/mjmdiss.sty
+++ b/mjmdiss.sty
@@ -280,7 +280,7 @@
   \mbox{\ensuremath{\langle}\h{#1}, #2, #3\ensuremath{\rangle}}%
 }
 \newcommand{\rtrans}[3]{%
-  \mbox{\ensuremath{\langle}#1, #2, #3\ensuremath{\rangle}}%
+  \mbox{\ensuremath{R\langle}#1, #2, #3\ensuremath{\rangle}}%
 }
 
 % text shortcuts
