Add text on chord substitution, trans. networks.

--- a/diss.bib
+++ b/diss.bib
@@ -388,9 +388,9 @@ Theory} }
 @review{hall:2009,
   author      = {Hall, Rachel Wells},
   title       = {Review of David Lewin, \textit{Generalized Musical Intervals
-                and Transformations}, \textit{Musical Form and
-                Transformation: Four Analytic Essays}, and \textit{Musical
-                Form and Transformation}},
+                and Transformations} and \textit{Musical Form and
+                Transformation: Four Analytic Essays}},
+  shorttitle  = {Review of \textit{GMIT} and \textit{MFT}},
   journal     = {Journal of the American Musicological Society},
   volume      = {62},
   number      = {1},
