--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -306,6 +306,27 @@
   palm keys are unreachable with the right hand). We will see a concrete
   example of this below.}
 
+\fntext{csa-6}{%
+  The diagram here assumes \h{Ab7}, since it is more common to substitute
+  dominant sevenths than minor sevenths. An analysis with \h{Abm7} would be
+  similar, except that the second chord would be in the 6\flat\ collection.}
+
+\fntext{csa-7}{%
+  Recall from Table \ref{cst:scale-table} that a diminished scale played over
+  a dominant chord is always the whole--half diminished scale. Conceptually,
+  the parent scale of \h{C7} is \Bflat Lydian, so the scale in question is the
+  second mode of the \Bflat whole--half diminished scale (which is of course the
+  same as the C half--whole diminished scale).}
+
+\fntext{csa-8}{%
+  % xxx need MFT citation
+  All of the networks here are what Lewin calls ``figural'' networks ();
+  since the $R$ transformations do not form a semigroup, a ``formal'' network
+  (showing all possible transformations) is not possible. Hall suggests
+  in a footnote \parentext{\citetitle[213n16]{hall:2009}} that the logical
+  structure of the group is unnecessary in figural networks; the networks of
+  this figure support this claim.}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../diss"
