Add text/example about ii-V patterns.

--- a/diss.bib
+++ b/diss.bib
@@ -954,6 +954,17 @@ Theory} }
   issue       = {Autumn}
 }
 
+@review{swift:1960,
+  author      = {Swift, Richard G.},
+  title       = {Letter to the editor},
+  journal     = {Journal of Music Theory},
+  volume      = {4},
+  number      = {1},
+  pages       = {128},
+  month       = apr,
+  year        = {1960}
+}
+
 @book{tufte:2001,
   author      = {Tufte, Edward},
   title       = {The Visual Display of Quantitative Information},
