--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -299,12 +299,8 @@
 \fntext{csa-5}{%
   There are two staves in this figure because Kirk often played multiple
   saxophones simultaneously. Here the tenor saxophone (which sounds down an
-  octave) is played with his left
-  hand and the manzello---a modified soprano saxophone---is played with his
-  right. Normally the left hand is positioned at the top of the saxophone, so
-  playing it in this manner limits his note choices somewhat (the left-hand
-  palm keys are unreachable with the right hand). We will see a concrete
-  example of this below.}
+  octave) is played with his left hand and the manzello---a modified soprano
+  saxophone---is played with his right.}
 
 \fntext{csa-6}{%
   The diagram here assumes \h{Ab7}, since it is more common to substitute
@@ -326,6 +322,21 @@
   in a footnote \parentext{\citetitle[213n16]{hall:2009}} that the logical
   structure of the group is unnecessary in figural networks; the networks of
   this figure support this claim.}
+
+\fntext{csa-9}{%
+  The pile-driver/gnat metaphor comes from Richard G.\ Swift's response to
+  Lewin's first published article \parentext{\headlesscite{swift:1960}; quoted in
+    \cite[162]{hook:2007gmit}}.}
+
+\fntext{csa-10}{%
+  Figures \ref{csa:kirk-tfo-progs}c is missing beats 2--4 of the third bar
+  because this \tfo leads into the turnaround in Figure
+  \ref{csa:first-chorus-turnaround}, which distracts from the topic at hand.}
+
+\fntext{csa-11}{%
+  Absent any additional information we will assume Russell's most ingoing
+  scale for chords. Since there is no B (flat or natural) in any of the third
+  bars of Figure \ref{csa:kirk-tfo-progs}, we thus assume F Lydian.}
 
 %%% Local Variables:
 %%% mode: latex
