Fix dotfills in transcriptions TOC.
They weren't aligned properly before; now they are.

--- a/appendices/transcriptions.tex
+++ b/appendices/transcriptions.tex
@@ -38,13 +38,10 @@ refer to a given passage's harmonic context.
 \section*{List of Transcriptions}
 
 \begin{compactitem}[\hspace{1.5em}]
-    \item ``Autumn Leaves'' -- Gene Ammons and Sonny Stitt \dotfill
-      \pageref{transcription:autumn-leaves}
-    \item ``Blues for Alice'' -- Rahsaan Roland Kirk \dotfill
-      \pageref{transcription:blues-for-alice}
-    \item ``Isotope'' -- Joe Henderson \dotfill \pageref{transcription:isotope}
-    \item ``Rhythm-a-ning'' -- Johnny Griffin and Thelonious Monk \dotfill
-      \pageref{transcription:rhythm-a-ning}
+    \item ``Autumn Leaves'' -- Gene Ammons and Sonny Stitt \DottedPage{transcription:autumn-leaves}
+    \item ``Blues for Alice'' -- Rahsaan Roland Kirk \DottedPage{transcription:blues-for-alice}
+    \item ``Isotope'' -- Joe Henderson \DottedPage{transcription:isotope}
+    \item ``Rhythm-a-ning'' -- Johnny Griffin and Thelonious Monk \DottedPage{transcription:rhythm-a-ning}
 \end{compactitem}
 \nocite{ammons:stitt,henderson:isotope,monk:action,kirk:freekings}
 
