Add MFT citation.

--- a/diss.bib
+++ b/diss.bib
@@ -637,6 +637,16 @@ Theory} }
   year        = {\mkbibbrackets{1987} 2007}
 }
 
+@book{lewin:mft,
+  author      = {Lewin, David},
+  title       = {Musical Form and Transformation},
+  subtitle    = {Four Analytic Essays},
+  shorttitle  = {MFT},
+  address     = {New York},
+  publisher   = {Oxford University Press},
+  year        = {\mkbibbrackets{1993} 2007}
+}
+
 @article{lewis:1996,
   author      = {Lewis, George},
   title       = {Improvised Music after 1950: Afrological and Eurological
