--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -315,11 +315,11 @@
   same as the C half--whole diminished scale).}
 
 \fntext{csa-8}{%
-  % xxx need MFT citation
-  All of the networks here are what Lewin calls ``figural'' networks ();
-  since the $R$ transformations do not form a semigroup, a ``formal'' network
-  (showing all possible transformations) is not possible. Hall suggests
-  in a footnote \parentext{\citetitle[213n16]{hall:2009}} that the logical
+  All of the networks here are what Lewin calls ``figural''
+  networks \parentext{\headlesscite[45--53]{lewin:mft}}; since the $R$
+  transformations do not form a semigroup, a ``formal'' network (showing all
+  possible transformations) is not possible. Hall suggests in a
+  footnote \parentext{\citetitle[213n16]{hall:2009}} that the logical
   structure of the group is unnecessary in figural networks; the networks of
   this figure support this claim.}
 
